[package]
name = "el-noches"
version = "0.1.0"
edition = "2021"
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md",
]
homepage = "https://github.com/aftershootco/el-noches"
description = "Histogram matching for colored images."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.22.5"
